FIXED HEADER BUG WHERE TEXT @ 100%W WENT OFF SCREEN BY SETTING HEADER TO BOX SIZING BORDER BOX. FINAL COMMIT ON THIS ISSUE

--- a/src/style.scss
+++ b/src/style.scss
@@ -45,6 +45,8 @@
      padding: 20px 20px 5px 40px;
      background-color: $background-color;
      z-index: 1;
+     width: 100vw;
+     box-sizing: border-box;
  }
  
 #title {
@@ -337,8 +339,7 @@ ul {
 .sticky {
     position: fixed;
     top: 0;
-    width: 100vw;
-    right: 0px;
+    width: 100%;
 }
   
   .sticky + .content-class {
@@ -355,7 +356,8 @@ $desktop: 1024px;
         display: flex;
         flex-direction: column;
         align-items: center;
-        padding: 20px 20px 5px 20px;
+        padding: 0px;
+        padding-top: 15px;
         width: 100vw;
 
         #title {
